--- a/LibrarySystem/src/edu/mum/cs/cs401/UI/AdminUI.fxml
+++ b/LibrarySystem/src/edu/mum/cs/cs401/UI/AdminUI.fxml
@@ -7,7 +7,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="110.0" layoutY="87.0" prefHeight="94.0" prefWidth="177.0" text="AdminUI">
+      <Label layoutX="48.0" layoutY="87.0" prefHeight="94.0" prefWidth="471.0" text="AdminUI Add members">
          <font>
             <Font size="38.0" />
          </font>
